Bug 78712 - Problem forwarding as attachment with encoding set to 'quoted-printable'
Summary: Problem forwarding as attachment with encoding set to 'quoted-printable'
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2004-03-30 03:00 UTC by George
Modified: 2009-07-23 15:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Buggy mail taken from kmail's sent-mail folder (12.49 KB, text/plain)
2006-04-17 15:51 UTC, Tristan Miller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description George 2004-03-30 03:00:59 UTC
Version:           1.6.1 (using KDE 3.2.1, compiled sources)
Compiler:          gcc version 2.95.3 20010315 (release)
OS:          Linux (i686) release 2.4.19

I seem to be having a problem when forwarding mail as an attachment
if the attachment encoding defaults to or is set to 'quoted-printable'.
MTA's used here are sendmail 8.12.9 and 8.12.10.

Blank lines appear in the attachment, and I only noticed this when it
broke a header (part of the original header ended up being displayed
along with the original message body).


For the following email, forwarded as attachment with encoding changed to 'quoted-printable'

[--- Original headers (munged addresses to 'xxxx') ---]
Return-Path: <xxxxx>
Received: from troot.demon.co.uk (xxxx [192.168.0.1])
	by wkstn1.local.lan (8.12.10/8.12.10) with ESMTP id i2Q1oS6m001789
	for <xxxx>; Fri, 26 Mar 2004 01:50:28 GMT
Received: from lon1-punt3-4.mail.demon.net (lon1-punt3-4.mail.demon.net [194.217.242.167])
	by troot.demon.co.uk (8.12.9/8.12.9) with SMTP id i2Q1oQNC008140
	for <xxxx>; Fri, 26 Mar 2004 01:50:27 GMT
Received: from punt-3.mail.demon.net by mailstore
	for xxxx id 1B6gNI-0000NI-Nd;
	Fri, 26 Mar 2004 01:43:10 +0000
Received: from [194.217.242.71] (helo=anchor-hub.mail.demon.net)
	by punt-3.mail.demon.net with esmtp id 1B6gNI-0000NI-Nd; Fri, 26 Mar 2004 01:43:08 +0000
Received: from [193.195.224.3] (helo=internal.mail.demon.net)
	by anchor-hub.mail.demon.net with esmtp id 1B6gNH-00056C-PQ; Fri, 26 Mar 2004 01:43:07 +0000
Received: (from xxxx)
	by internal.mail.demon.net id i2PD67411493;
	Thu, 25 Mar 2004 13:06:07 GMT
Message-ID: <IjUh1IAbhtYAFwJb@demon.net>
Date: Thu, 25 Mar 2004 13:02:19 +0000
To: xxxx
From: <xxxx>
Reply-To: xxxx
Subject: Planned Maintenance - ADSL
MIME-Version: 1.0
X-Mailer: Turnpike Integrated Version 5.01 U <bS3grvfX$o+p8Jofc680ZqzcmN>
Sender: xxxx
Precedence: bulk
Status: R
X-Status: N
X-KMail-EncryptionState:  
X-KMail-SignatureState:  
X-KMail-MDN-Sent:  
[--- End Original headers (munged addresses to 'xxxx') ---]



The attached part of the forwarded mail is as follows (only attachment headers included)
Notice the blank line in second 'Received' header.  Both KMail and Pine see this as the beginning
of the message body.

[--- Attachment (munged addresses to 'xxxx') ---]
Content-Type: message/rfc822;
  name="Testing"
Content-Transfer-Encoding: quoted-printable
Content-Description: "Malcolm S. Muir" <xxxx>: Planned Maintenance - ADSL
Content-Disposition: inline;
	filename="Testing"

Return-Path: <xxxx>
Received: from troot.demon.co.uk (xxxx [192.168.0.1])
	by wkstn1.local.lan (8.12.10/8.12.10) with ESMTP id i2Q1oS6m001789
	for <xxxx>; Fri, 26 Mar 2004 01:50:28 GMT
Received: from lon1-punt3-4.mail.demon.net (lon1-punt3-4.mail.demon.net [19=

4.217.242.167])
	by troot.demon.co.uk (8.12.9/8.12.9) with SMTP id i2Q1oQNC008140
	for <xxxx>; Fri, 26 Mar 2004 01:50:27 GMT
Received: from punt-3.mail.demon.net by mailstore
	for xxxx id 1B6gNI-0000NI-Nd;
	Fri, 26 Mar 2004 01:43:10 +0000
Received: from [194.217.242.71] (helo=3Danchor-hub.mail.demon.net)
	by punt-3.mail.demon.net with esmtp id 1B6gNI-0000NI-Nd; Fri, 26 Mar 2004 =
01:43:08 +0000
Received: from [193.195.224.3] (helo=3Dinternal.mail.demon.net)
	by anchor-hub.mail.demon.net with esmtp id 1B6gNH-00056C-PQ; Fri, 26 Mar 2=
004 01:43:07 +0000
Received: (from xxxx)
	by internal.mail.demon.net id i2PD67411493;
	Thu, 25 Mar 2004 13:06:07 GMT
Message-ID: <IjUh1IAbhtYAFwJb@demon.net>
Date: Thu, 25 Mar 2004 13:02:19 +0000
To: xxxx
=46rom: <xxxx>
Reply-To: xxxx
Subject: Planned Maintenance - ADSL
MIME-Version: 1.0
X-Mailer: Turnpike Integrated Version 5.01 U <bS3grvfX$o+p8Jofc680ZqzcmN>
Sender: xxxx
Precedence: bulk
Content-Type:=20
[--- Attachment (munged addresses to 'xxxx') ---]
Comment 1 Andreas Gungl 2005-06-12 21:35:15 UTC
Do you still see this problem in KMail 1.8.x? If yes, can you provide (attach) an example message which can be used to reproduce the inclusion of that empty line? TIA
Comment 2 George 2005-06-12 22:52:06 UTC
On Sunday 12 June 2005 20:35, Andreas Gungl wrote:
[bugs.kde.org quoted mail]


I haven't upgraded yet.  Still using KMail 1.6.2, and been working
around the problem.
I have been trying to find time to download a newer KDE version, 
and will let you know if I can reproduce the problem when I do.

Thanks
Comment 3 Tristan Miller 2006-04-17 15:39:55 UTC
Confirming that this problem still exists in KMail 1.9.1 (KDE 3.5.2).  Forwarding a message as a quoted-printable attachment breaks it; the resulting attachment has its headers mangled.  This makes it impossible to send spam reports to SpamCop, for example.  I will attach an example.
Comment 4 Tristan Miller 2006-04-17 15:51:44 UTC
Created attachment 15658 [details]
Buggy mail taken from kmail's sent-mail folder

Here's an example of what happens when you try to forward a quoted-printable
message as an attachment in KMail.  Note how KMail is inserting newlines into
the forwarded message.	It does so in the message headers, which break it.
Comment 5 Michael Leupold 2008-11-11 08:28:12 UTC
Still reproducible on trunk r881868.
Comment 6 Jaime Torres 2009-07-22 19:04:49 UTC
SVN commit 1001203 by jtamate:

BUG: 78712

Do not append a newline if the content-disposition mode already contains a newline.

 M  +4 -1      messagecomposer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1001203
Comment 7 Allen Winter 2009-07-22 19:27:23 UTC
SVN commit 1001216 by winterz:

Backport r1001203 by jtamate from trunk to the 4.3 branch:

CCBUG: 78712

Do not append a newline if the content-disposition mode already contains a newline.


 M  +4 -1      messagecomposer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1001216
Comment 8 Allen Winter 2009-07-23 15:28:55 UTC
SVN commit 1001498 by winterz:

fix the fix of the fix for 
Do not append a newline if the content-disposition mode already contains a newline.

CCBUG: 78712
CCMAIL: jtamate@gmail.com


 M  +2 -3      messagecomposer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1001498
Comment 9 Allen Winter 2009-07-23 15:29:31 UTC
SVN commit 1001499 by winterz:

Backport r1001498 by winterz from trunk to the 4.3 branch:

fix the fix of the fix for 
Do not append a newline if the content-disposition mode already contains a newline.

CCBUG: 78712
CCMAIL: jtamate@gmail.com



 M  +2 -3      messagecomposer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1001499