BUG: 78712

Do not append a newline if the content-disposition mode already contains a newline.

svn path=/trunk/KDE/kdepim/; revision=1001203