messagecomposer.cpp
@@ -2235,7 +2235,10 @@ bool MessageComposer::processStructuringInfo( const QString bugURL,
       if ( const char *str = nestedContentDisposition( format, signing ) ) {
         codeCStr += "Content-Disposition: ";
         codeCStr += str;
-        codeCStr += '\n';
+        if ( !str.endsWith('\n') )
+        {
+           codeCStr += '\n';
+        }
       }
       if ( binaryHint( format ) ) {
         codeCStr += "Content-Transfer-Encoding: base64\n\n";
